Develop App and the login to replace the DOM

--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,14 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Envato Front End Coding Test</title>
-    <link rel='stylesheet' href='style.css' />
+    <link href='style.css' rel="stylesheet" crossorigin="anonymous" />
   </head>
   <body>
-    <script src='script.js'></script>
+    <div id="App"> 
+      <div class="flex flexJustifyCenter flexAlignItemCenter minHeight800vh h1">
+        Loading...
+      </div>
+    </div>
+    <script src='script.js' crossorigin="anonymous"></script>
   </body>
 </html>
