--- a/app/tests.html
+++ b/app/tests.html
@@ -24,9 +24,26 @@
         expect(Heading()).toBeA('string')
       }
 
+
+      // Containers
+      const testHeader = () => {
+        expect(Header).toExist()
+        expect(Header).toBeA('function')
+        expect(Header()).toBeA('string')
+      }
+
+      // Pages
+      const testApp = () => {
+        expect(App).toExist()
+        expect(App).toBeA('function')
+        expect(App()).toBeA('string')
+      }
+
       const callTests = () => {
         testLogoIcon()
         testHeading()
+        testHeader()
+        testApp()
       }
 
       callTests()
