Adding all the colors in css

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>Envato Front End Coding Test</title>
     <link href='style.css' rel="stylesheet" crossorigin="anonymous" />
   </head>
-  <body>
+  <body class="colorBlack">
     <div id="App"> 
       <div class="flex flexJustifyCenter flexAlignItemCenter minHeight800vh h1">
         Loading...
