--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Envato Front End Coding Test</title>
+    <title>Github Front End Coding Test</title>
     <link href='style.css' rel="stylesheet" crossorigin="anonymous" />
   </head>
   <body class="colorBlack">
